--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ dist/*
 target/
 lib_managed/
 src_managed/
-project/boot/
-project/plugins/project/
+project/
+build.sbt
+
 
 # Scala-IDE specific
 .scala_dependencies
